# rust-newletters

./: Cargo.toml  Dockerfile  LICENSE  README.md  configuration.json
scripts/: init_db.sh
src/: configuration.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
